--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
         </div>
     </div>
 </section>
+
+<section>
+	<hr>
+	Copy right @ 2016 Hein Htet Aung (09798893138)
+</section>
 </div>
 </body>
 </html>
