--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="heading ">
                         <h4 >Sign up today</h4>
                     </div>
-					<form action="success.html" method="post" onsubmit="return checkall()">                        
+					<form action="success.html" method="post">                        
 						<div role="form">
                             
                             <div class="form-group" id="reqname">
